[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit"]

[project]
name = "graphrag-lexical-graph"
version = "3.18.5"
description = "AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/graphrag_toolkit/lexical_graph/requirements.txt"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]
dev = [
    "pre-commit>=3.5.0",
]

# These overrides resolve a transitive dependency conflict: aioboto3==15.5.0
# (required by LlamaIndex) exact-pins aiobotocore==2.25.1, which pins
# botocore<1.40.62. Consumers needing botocore>=1.41.0 cannot install both.
#
# The overrides upgrade aiobotocore to 2.26.0 (which accepts botocore>=1.41.0)
# and co-version boto3/botocore accordingly.
#
# THIS IS TEMPORARY — remove once the upstream LlamaIndex PRs are merged and
# released:
#   https://github.com/run-llama/llama_index/pull/21915
#   https://github.com/run-llama/llama_index/pull/21916
#
# NOTE: override-dependencies is only respected by uv. pip users are unaffected
# and will continue to hit the botocore<1.40.62 constraint.
[tool.uv]
override-dependencies = [
    "aiobotocore>=2.26.0,<2.27.0",
    "botocore>=1.41.0,<1.41.6",
    "boto3>=1.41.0,<1.41.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/graphrag_toolkit/lexical_graph",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

# Coverage configuration lives in .coveragerc (used by CI via --cov-config).

