[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit_contrib"]


[project]
name = "graphrag-toolkit-lexical-graph-sparql"
version = "0.1.0"
description = "RDF/SPARQL endpoint support for the AWS GraphRAG Toolkit lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/graphrag_toolkit_contrib/lexical_graph/storage/graph/sparql/requirements.txt"]

[project.optional-dependencies]
neptune = ["botocore[crt]>=1.40.61,<2"]
